initied base libriraries and configured base project

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,6 +1,12 @@
 /* Здесь обозначаем максимально глобальные стили на весь проект */
+
 @layer base {
   html {
-    /* font-family: "Roboto"; */
+    font-family: "Roboto";
+  }
+
+  button,
+  a {
+    cursor: pointer;
   }
 }
