--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -7,6 +7,7 @@
 @theme {
   --color-bg-header: oklch(25.86% 0.003 228.93);
   --color-bg-body: oklch(24.21% 0.009 255.59);
+  --color-bg-secondary: oklch(0.3126 0.014 211.12);
   --color-text: var(--text-color-default);
   --color-text-secondary: oklch(from var(--color-text) l c h / 80%);
 
