--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,10 +1,18 @@
 @layer utilities {
   .-absVertCenter {
-    /* @apply absolute top-0 bottom-0 m-auto; */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
   }
 
   .-absCenter {
-    /* @apply absolute top-0 right-0 bottom-0 left-0 m-auto; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
   }
 
   .-truncate {
