--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -8,33 +8,34 @@
   /* Новая цветовая гамма - start*/
   /* контраст color-text к поверхностям 10+ - отлично */
 
-/* Палитра базовых цветов  - старт*/
-  --font-main: 'Montserrat Alternates', 'Roboto';
-  --font-secondary: 'Roboto';
-  --font-decorate: 'Artist-Nouveau'; /*его еще установить надо*/
+  /* Палитра базовых цветов  - старт*/
+  --font-main: "Montserrat Alternates", "Roboto";
+  --font-secondary: "Roboto";
+  --font-decorate: "Artist-Nouveau"; /*его еще установить надо*/
 
   --color-red: oklch(0.5555 0.1429 26.42);
   --color-red-hover: oklch(71% 0.05 45);
   --color-neutral-dark: oklch(0.3132 0 0);
   --color-neutral-dark-hover: oklch(0.6128 0 0);
   --color-brown: oklch(0.5114 0.0833 55.39);
-  --color-brown-hover: oklch(0.499 0.0853 55.27);
-  --color-dark-brown: oklch(0.4 0.1 50);
+  --color-brown-hover: oklch(0.5875 0.0833 55.39);
+  --color-dark-brown: oklch(0.3215 0.0714 51.76);
   --color-green: oklch(0.5974 0.1198 161.26);
   --color-green-hover: oklch(0.6908 0.1579 158.13);
   --color-gold: oklch(0.7007 0.1502 69.8);
   --color-gold-hover: oklch(0.6908 0.1579 158.13);
-  --color-blue:  oklch(0.7234 0.1421 253);
+  --color-blue: oklch(0.7234 0.1421 253);
   --color-blue-hover: oklch(0.7685 0.1066 252.15);
   --color-neutral-light: oklch(0.9 0.02 60);
   --color-neutral-medium: oklch(0.7 0.05 55);
+  --color-white: oklch(0.9791 0 0);
 
-/* Палитра базовых цветов  - конец*/
+  /* Палитра базовых цветов  - конец*/
 
   --color-danger: var(--color-red);
   --color-danger-hover: var(--color-red-hover);
-  --color-main: var(--color-brown);
-  --color-main-hover: var(--color-brown-hover);
+  --color-primary: var(--color-brown);
+  --color-primary-hover: var(--color-brown-hover);
   --color-success: var(--color-green);
   --color-success-hover: var(--color-green-hover);
   --color-warning: var(--color-gold);
@@ -43,37 +44,54 @@
   --color-secondary-hover: var(--color-neutral-dark-hover);
   --color-info: var(--color-blue);
   --color-info-hover: var(--color-blue-hover);
-  
+
   --color-border: var(--color-neutral-dark);
   --color-text-secondary: var(--color-brown);
   --color-text-primary: var(--color-neutral-dark);
-  --color-primary-background: oklch(0.9189 0 0);
-  --color-elements-surface: oklch(0.9461 0 0);
+  --color-text-primary-inverted: var(--color-white);
+  --color-primary-background: oklch(0.9151 0.006 5);
+  --color-elements-surface: var(--color-white);
   --color-text: var(--color-neutral-dark);
+  --color-text-inverted: var(--color-white);
   --color-text-secondary: var(--color-brown);
   --color-shadow: oklch(0.3329 0 0 / 55%);
   --color-border: var(--color-neutral-medium);
-  --color-elements-surface: var(--color-neutral-light);
-  --color-focus-state: var(--color-info-hover);
+  /* --color-focus-state: var(--color-secondary-hover); */
+  --color-focus-state: var(--color-neutral-medium);
   --color-bg-footer: var(--color-dark-brown);
   --color-bg-header: var(--color-dark-brown);
-  /* --color-link: */
-  /* --color-link-hover: */ 
-  /* --color-link-visited: */ 
+  --color-label: color-mix(in srgb, var(--color-neutral-dark) 50%, transparent);
+  --color-placeholder: color-mix(
+    in srgb,
+    var(--color-neutral-dark) 40%,
+    transparent
+  );
 
+  --color-link: var(--color-blue);
+  --color-link-hover: var(--color-blue-hover);
+  --color-link-visited: var(--color-blue-600);
 
-  --shadow-color: oklch(0.3329 0 0 / 55%);
-  --shadow-box-text: 1px 1px 0px var(--shadow-color);
-  --shadow-box-elements: 3px 3px 0px var(--shadow-color);
-
+  /* Почему-то переменные некореектно работают будучи 4ым значением цвета тени */
+  --shadow-box-text: 1px 1px 0px oklch(0.3329 0 0 / 55%);
+  --shadow-box-elements: 3px 3px 0px oklch(0.3329 0 0 / 55%);
 
   /* Новая цветовая гамма - end*/
 
-  --color-bg-header: oklch(25.86% 0.003 228.93);
-  --color-bg-body: oklch(0.9189 0 0);
+  /* --color-bg-header: oklch(25.86% 0.003 228.93);
+  --color-bg-body: oklch(0.9189 0 0); */
   --color-bg-secondary: oklch(0.3126 0.014 211.12);
 
   /* NUXT_UI_VARS */
-  --ui-bg: var(--color-bg-body);
+  --ui-bg: var(--color-primary-background);
+  --ui-secondary: var(--color-secondary);
+  --ui-success: var(--color-success);
+  --ui-primary: var(--color-primary);
+  --ui-info: var(--color-info);
+  --ui-warning: var(--color-warning);
+  --ui-error: var(--color-error);
+  --ui-primary: var(--color-elements-surface);
+
+  --ui-text-inverted: var(--color-white);
+  --tw-ring-color: var(--color-border);
+  --ui-border: var(--color-border);
 }
-z
