--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,34 +1,34 @@
-@layer utility {
-  .-absVertCenter {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-  }
+@layer utilities {
+}
 
-  .-absCenter {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-  }
+@utility -absVertCenter {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
 
-  .-truncate {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+@utility -absCenter {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
 
-  .-borderSimple {
-    /* @apply border-primary border-[1px] border-solid; */
-  }
+@utility -truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
-  .-shadow-element {
-    box-shadow: var(--shadow-box-elements);
-  }
-  .-shadow-text {
-    box-shadow: var(--shadow-box-text);
-  }
+@utility shadow-element {
+  box-shadow: var(--shadow-box-elements);
+}
+@utility shadow-text {
+  box-shadow: var(--shadow-box-text);
+}
+@utility shadow-button {
+  box-shadow: 2px 2px 0 var(--color-shadow);
 }
