Вроде всё что было адаптировал под новую цветовой стиль

--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -41,7 +41,9 @@
 
   .base-input {
     background: var(--color-neutral-light);
-    outline: 2px solid var(--color-brown);
+    border: 2px solid var(--color-brown);
+    box-sizing: border-box;
+    height: 32px;
     box-shadow: var(--shadow-box-elements);
     border-radius: 4px;
     color: var(--color-text);
