--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -82,7 +82,7 @@
 
   /* --color-bg-header: oklch(25.86% 0.003 228.93);
   --color-bg-body: oklch(0.9189 0 0); */
-  --color-bg-secondary: oklch(0.3126 0.014 211.12);
+  --color-bg-secondary: oklch(0.3126 0.014 211.12 / 70%);
 
   /* NUXT_UI_VARS */
   --ui-bg: var(--color-primary-background);
